--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,5 @@ Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
   Enabled: true
+Lint/SuppressedException:
+  AllowComments: true
