--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,7 @@ Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
   Enabled: true
+Lint/SuppressedException:
+  AllowComments: true
+Metrics/BlockLength:
+  Max: 30
