add install instructions

--- a/party.env.example
+++ b/party.env.example
@@ -7,4 +7,4 @@
 export PARTY_SENDGRID_API_KEY='' # Get this key from send Grid
 PARTY_SENDGRID_EMAIL='' # TO EMAIL Address from Sendgrid
 export PARTY_HMAC_URl_KEY='' # Generate via a securerandom
-export PARTY_SESSION_KEY=''  # Generate via sesurerandom
+export PARTY_SESSION_KEY=''  # Generate via securerandom
