--- a/party.env.example
+++ b/party.env.example
@@ -5,6 +5,6 @@
 # Source This file.
 
 export PARTY_SENDGRID_API_KEY='' # Get this key from send Grid
-PARTY_SENDGRID_EMAIL='' # TO EMAIL Address from Sendgrid
+export PARTY_SENDGRID_EMAIL='' # TO EMAIL Address from Sendgrid
 export PARTY_HMAC_URl_KEY='' # Generate via a securerandom
 export PARTY_SESSION_KEY=''  # Generate via securerandom
