Add Bootstrap and backend cleanup (#8)
* removed unused gems

* update ENV

* add install instructions

* rubocop adjustments

* update readme

* bootstrap start

* set up nav bar

* start turning flash into an alert

* update flash error to use bootstrap alert danger

* move flash to use bootstrap alerts

* fix example

* update layout welcome and auth views

* add container to layout

* expand users and invites

* update party views

* removing testing gems and fixed party delete

* add bootstrap to party view contined

* finished party bootstrap views

* update app/views/party

* update theme edit.erb

* update themes controller and view

* minor update to auth views

* start users views and finish password_reset

* remove parties when user is deleted.

* update views and updated user profile.erb

* update view user reset_password

* update user views

* venue revamp start

* update edit_or_new view for venue

* update venue and theme list

* minor spacing corrections

* update list and view for venue

* update venue view

* add 404 behavior

* remove old css

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+.vscode/
 
 # Used by dotenv library to load environment variables.
 # .env
@@ -59,4 +60,4 @@ build-iPhoneSimulator/
 *.sqlite
 
 # env
-sinatra.env
+party.env
